<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#ddd"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context="com.nghiepnguyen.lession6.WorkFragment">

        <android.support.v7.widget.CardView
            app:cardUseCompatPadding="true"
            app:contentPadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/experience"
                    android:textColor="#434343"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/where_i_worked"
                    android:textColor="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/profile_image"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/workplace1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/inspire_vietnam_co_ltd"
                            android:textColor="#000"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/android_developer_ui_ux_design" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp">

                            <ImageView
                                android:id="@+id/imageview1"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/project_icon" />

                            <TextView
                                android:id="@+id/textview1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_toRightOf="@+id/imageview1"
                                android:text="@string/deliveree_amp_transportify_services"
                                android:textSize="16sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/textview1"
                                android:layout_marginLeft="5dp"
                                android:layout_toRightOf="@+id/imageview1"
                                android:text="@string/project1_des"
                                android:textSize="11sp" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp">

                            <ImageView
                                android:id="@+id/imageview2"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/project_icon" />

                            <TextView
                                android:id="@+id/textview2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_toRightOf="@+id/imageview2"
                                android:text="@string/deliveree_amp_transportify_for_drivers"
                                android:textSize="16sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/textview2"
                                android:layout_marginLeft="5dp"
                                android:layout_toRightOf="@+id/imageview2"
                                android:text="@string/project2_des"
                                android:textSize="11sp" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/responsible1"
                            android:textSize="11sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/workplace1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/asia_ict_service_jsc"
                            android:textColor="#000"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/android_developer" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp">

                            <ImageView
                                android:id="@+id/imageview3"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/project_icon" />

                            <TextView
                                android:id="@+id/textview3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_toRightOf="@+id/imageview3"
                                android:text="@string/gossiper"
                                android:textSize="16sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/textview3"
                                android:layout_marginLeft="5dp"
                                android:layout_toRightOf="@+id/imageview3"
                                android:text="@string/project3_des"
                                android:textSize="11sp" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp">

                            <ImageView
                                android:id="@+id/imageview4"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/project_icon" />

                            <TextView
                                android:id="@+id/textview4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_toRightOf="@+id/imageview4"
                                android:text="@string/virtualdrum"
                                android:textSize="16sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/textview4"
                                android:layout_marginLeft="5dp"
                                android:layout_toRightOf="@+id/imageview4"
                                android:text="@string/project4_des"
                                android:textSize="11sp" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp">

                            <ImageView
                                android:id="@+id/imageview5"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/project_icon" />

                            <TextView
                                android:id="@+id/textview5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_toRightOf="@+id/imageview5"
                                android:text="@string/okane"
                                android:textSize="16sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/textview5"
                                android:layout_marginLeft="5dp"
                                android:layout_toRightOf="@+id/imageview5"
                                android:text="@string/project5_des"
                                android:textSize="11sp" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp">

                            <ImageView
                                android:id="@+id/imageview6"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/project_icon" />

                            <TextView
                                android:id="@+id/textview6"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_toRightOf="@+id/imageview6"
                                android:text="@string/keiba"
                                android:textSize="16sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/textview6"
                                android:layout_marginLeft="5dp"
                                android:layout_toRightOf="@+id/imageview6"
                                android:text="@string/project6_des"
                                android:textSize="11sp" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp">

                            <ImageView
                                android:id="@+id/imageview7"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/project_icon" />

                            <TextView
                                android:id="@+id/textview7"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_toRightOf="@+id/imageview7"
                                android:text="@string/ohirudate"
                                android:textSize="16sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/textview7"
                                android:layout_marginLeft="5dp"
                                android:layout_toRightOf="@+id/imageview7"
                                android:text="@string/project7_des"
                                android:textSize="11sp" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/responsible2"
                            android:textSize="11sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
